# antsinspace

./: README.md
antscrewcounter/: .dockerignore  .gitignore  Dockerfile  Dockerfile-alpine  antscrewcounter-job.yaml  antscrewcounter.cpp  antworkerqueue.py  makefile
antspacedata/: .dockerignore  .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  antfilequeue.py  antspacedata-job.yaml  antspacedata.cpp  compile_commands.json  makefile
k8s-assets/: pvc.yaml  redis-deployment.yaml
